--- a/app/register/register.component.html
+++ b/app/register/register.component.html
@@ -1,9 +1,31 @@
-<h2>Profiles</h2>
+<div class="container">
+    <h1>Register Form</h1>
 
-<ul class="profiles">
-  <li *ngFor="let profile of profiles">
-    <span>{{profile.id}}</span>
-    <span>{{profile.firstName}}</span>
-    <span>{{profile.lastName}}</span>
-  </li>
-</ul>
+    <div *ngIf="token!=null">
+        <h3>You are already logged in.</h3>
+    </div>
+
+    <div *ngIf="token===null">
+        <form (ngSubmit)="onSubmit()" #registerForm="ngForm">
+            <!--{{diagnostic}}-->
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" required [(ngModel)]="model.email" name="email">
+                <!--<div [hidden]="email.valid || email.pristine" class="alert alert-danger"> Email is required</div>-->
+            </div>
+
+            <div class="form-group">
+                <label for="password1">Password</label>
+                <input type="password" class="form-control" id="password1" required [(ngModel)]="model.password1"
+                       name="password1">
+            </div>
+
+            <div class="form-group">
+                <label for="password2">Password</label>
+                <input type="password" class="form-control" id="password2" required [(ngModel)]="model.password2"
+                       name="password2">
+            </div>
+            <button type="submit" class="btn btn-default" [disabled]="!registerForm.form.valid">Submit</button>
+        </form>
+    </div>
+</div>
