--- a/app/answer/answer.component.html
+++ b/app/answer/answer.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
     <h1>{{model.name}}</h1>
-    <form (ngSubmit)="onSubmit()" #surveyForm="ngForm">
+    <form (ngSubmit)="onSubmit()" #answerForm="ngForm">
         {{diagnostic}}
         <div class="form-group form-group-sm">
             <label for="startTime">What time did you take the medicine? (Start Time)</label>
@@ -57,6 +57,6 @@
             <label>No</label>
         </div>
 
-        <button type="submit" class="btn btn-default" [disabled]="!surveyForm.form.valid">Submit</button>
+        <button type="submit" class="btn btn-default" [disabled]="!answerForm.form.valid">Submit</button>
     </form>
 </div>
