--- a/app/profiles/profiles.component.html
+++ b/app/profiles/profiles.component.html
@@ -6,7 +6,7 @@ Here should be a list of profiles
     <li *ngFor="let profile of profiles">
         <span>{{profile.id}}</span><br>
         <span>{{profile.email}}</span><br>
-        <span>{{profile.firstName}}</span><br>
+       <!-- <span>{{profile.firstName}}</span><br>
         <span>{{profile.middleName}}</span><br>
         <span>{{profile.dob}}</span><br>
         <span>{{profile.phone}}</span><br>
@@ -32,7 +32,7 @@ Here should be a list of profiles
         <span>{{profile.bowelMovement}}</span><br>
         <span>{{profile.activityLevel}}</span><br>
         <span>{{profile.bodyfat}}</span><br>
-
+-->
     </li>
 
 
