--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,18 @@ nav a.active {
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+
+
+
+
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
